feat: 사용자 지정 구분자 처리